; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/vr/extr_if_vr.c_vr_cam_mask.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/vr/extr_if_vr.c_vr_cam_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vr_softc = type { i32 }

@VR_MCAST_CAM = common dso_local global i32 0, align 4
@VR_CAMCTL = common dso_local global i32 0, align 4
@VR_CAMCTL_ENA = common dso_local global i32 0, align 4
@VR_CAMCTL_MCAST = common dso_local global i32 0, align 4
@VR_CAMCTL_VLAN = common dso_local global i32 0, align 4
@VR_CAMMASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vr_softc*, i32, i32)* @vr_cam_mask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vr_cam_mask(%struct.vr_softc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.vr_softc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.vr_softc* %0, %struct.vr_softc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @VR_MCAST_CAM, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %10, label %17

10:                                               ; preds = %3
  %11 = load %struct.vr_softc*, %struct.vr_softc** %4, align 8
  %12 = load i32, i32* @VR_CAMCTL, align 4
  %13 = load i32, i32* @VR_CAMCTL_ENA, align 4
  %14 = load i32, i32* @VR_CAMCTL_MCAST, align 4
  %15 = or i32 %13, %14
  %16 = call i32 @CSR_WRITE_1(%struct.vr_softc* %11, i32 %12, i32 %15)
  br label %24

17:                                               ; preds = %3
  %18 = load %struct.vr_softc*, %struct.vr_softc** %4, align 8
  %19 = load i32, i32* @VR_CAMCTL, align 4
  %20 = load i32, i32* @VR_CAMCTL_ENA, align 4
  %21 = load i32, i32* @VR_CAMCTL_VLAN, align 4
  %22 = or i32 %20, %21
  %23 = call i32 @CSR_WRITE_1(%struct.vr_softc* %18, i32 %19, i32 %22)
  br label %24

24:                                               ; preds = %17, %10
  %25 = load %struct.vr_softc*, %struct.vr_softc** %4, align 8
  %26 = load i32, i32* @VR_CAMMASK, align 4
  %27 = load i32, i32* %5, align 4
  %28 = call i32 @CSR_WRITE_4(%struct.vr_softc* %25, i32 %26, i32 %27)
  %29 = load %struct.vr_softc*, %struct.vr_softc** %4, align 8
  %30 = load i32, i32* @VR_CAMCTL, align 4
  %31 = call i32 @CSR_WRITE_1(%struct.vr_softc* %29, i32 %30, i32 0)
  ret void
}

declare dso_local i32 @CSR_WRITE_1(%struct.vr_softc*, i32, i32) #1

declare dso_local i32 @CSR_WRITE_4(%struct.vr_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
